fix security config to allow cross-origin requests